# tareas

./: .gitignore  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  tareas.txt
clientes/: admin.py  models.py  urls.py
core/: admin.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_project_core_projec_user_id_178de8_idx_and_more.py  0003_populate_timelog_tasks.py  0004_project_status.py
deploy/: nginx.conf  tareas-gunicorn.service
tareas/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
templates/: base.html  calendar.html  dashboard.html  login.html
templates/categories/: category_list.html
templates/projects/: project_list.html
templates/projects/partials/: project_tasks_modal_content.html
templates/tags/: tag_list.html
templates/tareas/: index.html
templates/tasks/: task_edit.html  task_list.html
templates/tasks/partials/: subtask_item.html  task_row.html  task_table.html
tesa/: settings.py  urls.py
usuarios/: models.py
